Fri Jun  9 02:42:54 1995  Tom Yu  (tlyu@dragons-lair)

	* rd_cred.c (krb5_rd_cred_basic): fix typo (extra "context"
		argument passed to krb5_xfree)

Thu Jun  8 22:48:27 1995  Theodore Y. Ts'o  <tytso@dcl>

	* rd_cred.c (krb5_rd_cred_basic): Fix problem where the ticket
		field was assigned with a krb5_data, which was then
		immediately freed.

Thu Jun  8 16:06:44 1995    <tytso@rsx-11.mit.edu>

	* compat_recv.c, auth_con.c, chk_trans.c, encrypt_tk.c,
		gc_frm_kdc.c, gc_via_tkt.c, gen_seqnum.c, gen_subkey.c,
		get_creds.c, get_in_tkt.c, in_tkt_ktb.c, in_tkt_pwd.c,
		in_tkt_skey.c, init_ctx.c, kdc_rep_dc.c, mk_cred.c,
		mk_error.c, mk_priv.c, mk_rep.c, mk_req.c, mk_req_ext.c,
		mk_cred.c, mk_safe.c, parse.c, preauth.c, rd_cred.c,
		rd_rep.c, rd_req.c, rd_req_dec.c, rd_safe.c, recvauth.c,
		sendauth.c, send_tgs.c, srv_rcache.c, walk_rtree.c: Clean
		up GCC -Wall flames.

Wed Jun  7 15:23:21 1995    <tytso@rsx-11.mit.edu>

	* conv_princ.c (krb5_425_conv_principal): Remove old CONFIG_FILES
		code. 

Fri May 26 10:18:28 1995 Keith Vetter (keithv@fusion.com)

	* makefile.in: removed for the PC creating shared directory.
	  (still bug with the '@SHARED_RULE@' line but I'm waiting
	  on tytso for that since I don't want to break Unix).

Thu May 25 09:58:42 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* gc_via_tkt.c (krb5_kdcrep2creds): Fix syntax error in the
		freeing of the keyblock.

Wed May 24 18:19:17 1995  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in, configure.in: Add rules for building shared library.

	* gc_via_tkt.c (krb5_kdcrep2creds): On an error, free the keyblock.

Tue May 23 16:28:42 1995  Theodore Y. Ts'o  (tytso@dcl)

	* gc_frm_kdc.c, preauth.c, t_kerb.c, t_walk_rtree.c, unparse.c:
		Rearrange #include files so that krb5.h gets included
		first, so that the debugging information can be more
		efficiently collapsed since the type numbers will be the
		same.

Sat May 20 14:01:16 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
