@@ -1,12 +1,8 @@
 AC_INIT(configure.in)
-WITH_CCOPTS
 CONFIG_RULES
-AC_SET_BUILDTOP
-WITH_NETLIB
 AC_PROG_ARCHIVE
 AC_PROG_ARCHIVE_ADD
 AC_PROG_RANLIB
 V5_SHARED_LIB_OBJS
 SubdirLibraryRule([$(OBJS)])
-KRB_INCLUDE
 V5_AC_OUTPUT_MAKEFILE
